--- a/src/components/App.css
+++ b/src/components/App.css
@@ -31,6 +31,10 @@
   width: 80px;
 }
 
+.todo-list .remove-btn {
+  float: right;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
